--- a/PressaoDiario/PressaoDiario/Views/Home/Index.cshtml
+++ b/PressaoDiario/PressaoDiario/Views/Home/Index.cshtml
@@ -6,9 +6,8 @@
 
     <div class="ml-lg-5">
         <h1>Diário da Pressão</h1>
-        <a href="@Url.Action("Adicionar")">Adicionar</a>
-        <a>Enviar para o médico</a>
-        <div class="table-responsive table-striped table-hover">
+        <input class="btn btn-secondary btn-block mb-2" type="button" value="Enviar para o Médico" />
+        <div class="table-responsive table-striped">
             <table class="table">
                 <thead class="thead-dark">
                     <tr>
@@ -43,6 +42,18 @@
                                 <svg id="i-activity" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="20" height="20" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
                                     <path d="M4 16 L11 16 14 29 18 3 21 16 28 16" />
                                 </svg>
+                                @if (item.Periodo == 1)
+                                {
+                                    <span class="material-icons">
+                                        wb_sunny
+                                    </span>
+                                }
+                                else
+                                {
+                                    <span class="material-icons">
+                                        brightness_3
+                                    </span>
+                                }
                             </td>
                             <td style="text-align: right; width: 125px !important">
                                 <a href="/Home/Excluir?id=@item.Id">Excluir</a> |
@@ -53,4 +64,11 @@
                 </tbody>
             </table>
         </div>
+        <nav class="nav justify-content-end">
+            <button type="button" class="btn btn-light rounded-circle" onclick="location='@Url.Action("Adicionar")'">
+                <svg id="i-plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="32" height="32" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
+                    <path d="M16 2 L16 30 M2 16 L30 16" />
+                </svg>
+            </button>
+        </nav>
     </div>
