Atividade que não funga

--- a/PressaoDiario/PressaoDiario/Views/Home/Adicionar.cshtml
+++ b/PressaoDiario/PressaoDiario/Views/Home/Adicionar.cshtml
@@ -6,6 +6,7 @@
 <h1 class="text-center mt-3 text-secondary">Adicionar</h1>
 <form method="post" action="Adicionar">
     <div class="form mt-5">
+        <input type="hidden" name="Visualizado" value="false" />
         <div class="row">
             <div class="form-group col">
                 <input type="text" placeholder="Data" class="form-control" name="Data" id="Data" required />
